[project]
name = "ez-wechatblog"
version = "26.0.b2.post20260430"
description = "微信公众号文章 → 通用 Markdown / 多平台博客后端"
authors = [{ name = "EZ_WeChatBlog Contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.0",
    "aiohttp>=3.9.0",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0",
    "pluggy>=1.5.0",
    "markdownify>=0.13.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]
fetcher = [
    "playwright>=1.50.0",
]

[project.scripts]
ez-wc = "ez_wechatblog.cli:app"

[tool.setuptools.packages.find]
include = ["ez_wechatblog*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]